# warp-ik

./: .dockerignore  .env.example  .gitignore  LICENSE  README copy.md  README.md  TODO.md  pyproject.toml
docker/: Dockerfile.arm  Dockerfile.arm-agx  Dockerfile.arm-gh200  Dockerfile.arm-rpi  Dockerfile.x86  Dockerfile.x86-3090  Dockerfile.x86-meerkat  requirements.arm-agx.txt  requirements.arm-gh200.txt  requirements.arm-rpi.txt  requirements.arm.txt  requirements.x86-3090.txt  requirements.x86-meerkat.txt  requirements.x86.txt
docs/: logs-3090.md  logs-gh200.md  logs.md
docs/specs/: arm-agx.md  arm-gh200.md  arm-rpi.md  x86-3090.md  x86-meerkat.md
morphs/: 2eab46.ipynb  base.adam.ipynb  fd_jacobian.py  geometric_jacobian.py  ik_3d.py  ik_6d.py  ik_geojac.py  test.py
prompts/: export.txt  format.txt  mutate.txt
scripts/: clean.sh  context.sh  docker.run.evo.sh  docker.run.evolve.sh  docker.run.morph.sh  docker.run.mutate.sh  docker.run.sh  docker.test.ai.sh  docker.test.sh  evolve.sh  help_context.sh  local.clean.sh  run.evolve.sh  run.morph.all.headless.sh  run.morph.all.sh  run.morph.render.sh  run.morph.sh  run.morph.track.sh  run.mutate.sh  run.sh  specs.sh  test.ai.sh  test.morph.sh  test.sh
src/: ai.py  device_properties.py  evolve.py  morph.py  mutate.py  run.py  test.py
src/warp/: cloth.py  device_properties.py
warp_ik/morphs/: base.py  blank.py  claude-1cd254.py  claude-f076f8.py  claude-fa5ac3.py  deepseek-3hf844.py  deepseek-jk97dh.py  gemini-10b293.py  gemini-67870d.py  gemini-71f9bf.py  gemini-7f3771.py  gpt-5f3e66.py  gpt-a6dacc.py  (+16 more)
(+7 files in other folders)
