[project]
name = "warp-ik-evo"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "warp-lang[extras]>=1.7.0",
    "wandb>=0.15.11",
    "tenacity>=8.2.0",
    "google-generativeai",
    "openai",
    "anthropic",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
]

[tool.ruff]
line-length = 120
target-version = "py310"