[project]
name = "warp_ik"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "psutil==5.9.0",
    "trimesh==4.6.6",
    "wandb==0.19.9",
    "anthropic==0.49.0",
    "openai==1.73.0",
    "google-generativeai==0.8.4",
    "replicate==1.0.4",
    "aiofiles==24.1.0",
    "python-dotenv==1.1.0",
    "tenacity==9.1.2",
]

[tool.setuptools]
packages = ["warp_ik"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
]